# Hop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.sh  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
assets/: hop.desktop  hop.icns
bins/hop/: Cargo.toml
bins/hop-migrate/: Cargo.toml
bins/hop-migrate/src/: main.rs
bins/hop/src/: main.rs
bins/hopc/: Cargo.toml
bins/hopc/src/: main.rs
bins/hopc/tests/: cli.rs
bins/hops/: Cargo.toml
bins/hops/src/: main.rs
bins/hops/tests/: cli.rs
bins/input-leap-migrate/: Cargo.toml
bins/input-leap-migrate/src/: main.rs
bins/input-leapc/: Cargo.toml
bins/input-leapc/src/: main.rs
bins/input-leapc/tests/: cli.rs
bins/input-leaps/: Cargo.toml
bins/input-leaps/src/: main.rs
bins/input-leaps/tests/: cli.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: clipboard.rs  ids.rs  lib.rs  modifier.rs  transfer.rs
crates/common/tests/: smoke.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  paths.rs  settings.rs
crates/hop-ui/: Cargo.toml
crates/hop-ui/src/: app.rs  identity.rs  lib.rs  theme.rs  util.rs
crates/hop-ui/src/runtime/: controller.rs  mod.rs  platform.rs
crates/hop-ui/src/tray/: backend_gtk.rs  backend_main.rs  icons.rs  menu.rs  mod.rs
crates/hop-ui/src/views/: client.rs  mod.rs  server.rs
crates/hop-ui/src/widgets/: add_peer_modal.rs  card.rs  mod.rs  qr.rs  segmented.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  codec.rs  lib.rs  protocol.rs  server.rs
crates/ipc/tests/: round_trip.rs
crates/net/: Cargo.toml
crates/net/src/: client.rs  fingerprint.rs  handshake.rs  keepalive.rs  lib.rs  listener.rs  stream.rs  tls.rs
crates/net/tests/: handshake.rs  tls.rs
crates/platform/core/: Cargo.toml
crates/platform/core/src/: error.rs  events.rs  lib.rs  mock.rs  screen.rs
crates/platform/ei/: Cargo.toml
crates/platform/ei/src/: lib.rs  screen.rs
crates/platform/macos/: Cargo.toml
crates/platform/macos/src/: lib.rs  screen.rs
crates/platform/windows/: Cargo.toml
crates/platform/windows/src/: lib.rs  screen.rs
crates/platform/x11/: Cargo.toml
crates/platform/x11/src/: clipboard.rs  keymap.rs  lib.rs  screen.rs
crates/platform/x11/tests/: clipboard.rs  inject.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  error.rs  lib.rs  message.rs  version.rs
crates/protocol/tests/: framing.rs  roundtrip.rs  snapshots.rs
crates/protocol/tests/fixtures/: mod.rs
crates/protocol/tests/snapshots/: snapshots__canonical_messages.snap
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/server/src/coordinator/: clipboard.rs  held.rs  layout.rs  mod.rs  proxy.rs  state.rs  task.rs
crates/server/tests/: coordinator_e2e.rs  e2e.rs
crates/transfer/: Cargo.toml
crates/transfer/src/: error.rs  lib.rs  path_guard.rs  receiver.rs  sender.rs
crates/transfer/tests/: round_trip.rs
scripts/: gen-icons.sh
scripts/ci/: macos-sign-and-notarize.sh
specs/: architecture.md  file-clipboard.md  rust-rewrite.md
specs/milestones/: M0-skeleton.md  M1-protocol.md  M11-coordinator.md  M12-release-packaging.md  M13-gui-backend.md  M14-tray.md  M16-linux-mvp.md  M17-windows-mvp.md  M18-macos-mvp.md  M2-net-handshake.md  README.md
xtask/: Cargo.toml
xtask/src/: main.rs
