[package]
name        = "xtask"
version     = "0.0.0"
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
publish     = false

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap   = { workspace = true }
