[package]
name        = "hop-migrate"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "One-shot migration of legacy XML configs to TOML."
publish     = false

[lints]
workspace = true

[[bin]]
name = "hop-migrate"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap   = { workspace = true }
