[package]
name        = "hop"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "Hop — desktop UI for Hop."

[lints]
workspace = true

[[bin]]
name = "hop"
path = "src/main.rs"

[dependencies]
hop-ui             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
