[package]
name         = "hopc"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Hop client — receives input from a server and injects it locally."

[lints]
workspace = true

[[bin]]
name = "hopc"
path = "src/main.rs"

[dependencies]
hop-client   = { workspace = true }
hop-config   = { workspace = true }
hop-net      = { workspace = true }
hop-platform = { workspace = true }

anyhow             = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util         = { workspace = true, features = ["rt"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
hop-platform-x11 = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
hop-platform-ei = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
hop-platform-macos = { workspace = true }

[target.'cfg(windows)'.dependencies]
hop-platform-windows = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile   = { workspace = true }
