[package]
name         = "input-leapc"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Input Leap client — receives input from a server and injects it locally."

[lints]
workspace = true

[[bin]]
name = "input-leapc"
path = "src/main.rs"

[dependencies]
input-leap-client   = { workspace = true }
input-leap-net      = { workspace = true }
input-leap-platform = { workspace = true }

anyhow             = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util         = { workspace = true, features = ["rt"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
input-leap-platform-x11 = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile   = { workspace = true }
