[package]
name         = "input-leaps"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Input Leap server — shares primary machine's input with clients."

[lints]
workspace = true

[[bin]]
name = "input-leaps"
path = "src/main.rs"

[dependencies]
input-leap-config   = { workspace = true }
input-leap-ipc      = { workspace = true }
input-leap-net      = { workspace = true }
input-leap-platform = { workspace = true }
input-leap-server   = { workspace = true }

anyhow             = { workspace = true }
async-trait        = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util         = { workspace = true, features = ["rt"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
input-leap-platform-x11 = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
input-leap-platform-ei = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
input-leap-platform-macos = { workspace = true }

[target.'cfg(windows)'.dependencies]
input-leap-platform-windows = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile   = { workspace = true }
