[package]
name        = "hop-client"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "Client-side logic for Hop (connects to a server, injects input)."

[lints]
workspace = true

[dependencies]
hop-common   = { workspace = true }
hop-protocol = { workspace = true }
hop-net      = { workspace = true }
hop-platform = { workspace = true }

tokio     = { workspace = true, features = ["rt", "macros", "sync", "time", "signal"] }
tokio-util = { workspace = true, features = ["rt"] }
backoff   = { workspace = true }
futures   = { workspace = true }
tracing   = { workspace = true }
thiserror = { workspace = true }
