[package]
name        = "hop-common"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "Shared types for Hop (IDs, clipboard formats, modifier masks)."

[lints]
workspace = true

[dependencies]
serde    = { workspace = true }
bitflags = { workspace = true }
