[package]
name        = "input-leap-config"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "TOML-based configuration loader for Input Leap."

[lints]
workspace = true

[dependencies]
input-leap-common = { workspace = true }

serde       = { workspace = true }
toml        = { workspace = true }
figment     = { workspace = true }
directories = { workspace = true }
shellexpand = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
