[package]
name        = "hop-ui"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "egui-based desktop UI for Hop."

[lints]
workspace = true

[dependencies]
eframe        = { workspace = true }
egui          = { workspace = true }
egui-phosphor = { workspace = true }
egui-notify   = { workspace = true }
tracing       = { workspace = true }
arboard       = { workspace = true }
directories   = { workspace = true }
anyhow        = { workspace = true }
chrono            = { workspace = true }
gethostname       = { workspace = true }
local-ip-address  = { workspace = true }

hop-net    = { workspace = true }
hop-config = { workspace = true }
