[package]
name        = "input-leap-ipc"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "Local IPC (unix socket / named pipe) between Input Leap daemon and GUI."

[lints]
workspace = true

[dependencies]
tokio        = { workspace = true, features = ["rt", "macros", "io-util", "sync"] }
interprocess = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
