[package]
name        = "hop-net"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "TCP + TLS transport and handshake for Hop."

[lints]
workspace = true

[dependencies]
hop-common   = { workspace = true }
hop-protocol = { workspace = true }

tokio            = { workspace = true, features = ["net", "rt", "macros", "time", "sync", "io-util"] }
tokio-util       = { workspace = true, features = ["codec"] }
tokio-rustls     = { workspace = true }
rustls           = { workspace = true }
rustls-pemfile   = { workspace = true }
rustls-pki-types = { workspace = true }
rcgen            = { workspace = true }
sha2             = { workspace = true }
bytes            = { workspace = true }
serde            = { workspace = true }
toml             = { workspace = true }
chrono           = { workspace = true }
tracing          = { workspace = true }
thiserror        = { workspace = true }
backoff          = { workspace = true }
futures          = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true, features = ["test-util", "rt-multi-thread"] }
tokio-util         = { workspace = true, features = ["codec", "rt"] }
tempfile           = { workspace = true }
tracing-subscriber = { workspace = true }
