[package]
name         = "input-leap-protocol"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "CBOR-based wire protocol for Input Leap."

[lints]
workspace = true

[dependencies]
input-leap-common = { workspace = true }

serde      = { workspace = true }
ciborium   = { workspace = true }
bytes      = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
thiserror  = { workspace = true }

[dev-dependencies]
futures         = { workspace = true }
insta           = { workspace = true }
proptest        = { workspace = true }
proptest-derive = { workspace = true }
tokio           = { workspace = true, features = ["io-util", "net", "rt", "macros"] }
tokio-test      = { workspace = true }
