[package]
name        = "hop-server"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "Server-side logic for Hop (screen routing, per-client proxies)."

[lints]
workspace = true

[dependencies]
hop-common   = { workspace = true }
hop-protocol = { workspace = true }
hop-net      = { workspace = true }
hop-platform = { workspace = true }

tokio     = { workspace = true, features = ["rt", "macros", "sync", "time", "signal"] }
tokio-util = { workspace = true, features = ["rt"] }
arc-swap  = { workspace = true }
bytes     = { workspace = true }
futures   = { workspace = true }
serde     = { workspace = true }
toml      = { workspace = true }
tracing   = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hop-client = { workspace = true }
chrono            = { workspace = true }
tempfile          = { workspace = true }
tokio             = { workspace = true, features = ["rt-multi-thread", "macros", "time", "test-util"] }
tracing-subscriber = { workspace = true }
