[package]
name        = "hop-platform"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "PlatformScreen trait and MockScreen for Hop."

[lints]
workspace = true

[dependencies]
hop-common = { workspace = true }

async-trait = { workspace = true }
bytes       = { workspace = true }
futures     = { workspace = true }
tokio       = { workspace = true, features = ["sync"] }
tokio-util  = { workspace = true, features = ["rt"] }
tracing     = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
