[package]
name        = "input-leap-platform-ei"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "Wayland/libei backend for Input Leap via reis + xdg-desktop-portal."

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
input-leap-common   = { workspace = true }
input-leap-platform = { workspace = true }

async-trait = { workspace = true }
bytes       = { workspace = true }
futures     = { workspace = true }
tokio       = { workspace = true, features = ["rt", "sync", "macros", "net"] }
tracing     = { workspace = true }
thiserror   = { workspace = true }
reis        = { workspace = true }
zbus        = { workspace = true }
