[package]
name        = "hop-platform-ei"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "Wayland/libei backend for Hop via reis + xdg-desktop-portal."

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
hop-common   = { workspace = true }
hop-platform = { workspace = true }

async-trait = { workspace = true }
bytes       = { workspace = true }
futures     = { workspace = true }
tokio       = { workspace = true, features = ["rt", "sync", "macros", "net"] }
tracing     = { workspace = true }
thiserror   = { workspace = true }
reis        = { workspace = true }
zbus        = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
serial_test = { workspace = true }
