[package]
name        = "hop-platform-macos"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "macOS backend for Hop."

[lints]
workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
hop-common   = { workspace = true }
hop-platform = { workspace = true }

async-trait   = { workspace = true }
bytes         = { workspace = true }
futures       = { workspace = true }
tokio         = { workspace = true, features = ["rt", "sync", "macros"] }
tracing       = { workspace = true }
thiserror     = { workspace = true }
objc2         = { workspace = true }
core-graphics = { workspace = true }
