[package]
name        = "input-leap-platform-x11"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "X11 backend for Input Leap (Linux/BSD)."

[lints]
workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
input-leap-common   = { workspace = true }
input-leap-platform = { workspace = true }

async-trait = { workspace = true }
bytes       = { workspace = true }
futures     = { workspace = true }
tokio       = { workspace = true, features = ["rt", "sync", "macros", "net"] }
tracing     = { workspace = true }
thiserror   = { workspace = true }
x11rb       = { workspace = true }
